--- a/force-app/main/default/pages/SNS_Tweet.page
+++ b/force-app/main/default/pages/SNS_Tweet.page
@@ -16,6 +16,7 @@
                 <apex:outputText value="{! Tweet__c.CreatedDate }"/>
                 <apex:outputText value="{! Tweet__c.title__c }"/>
                 <apex:outputText value="{! Tweet__c.body__c }"/>
+               <apex:outputText value="{! Tweet__c.commented_id__c"/> 
             </apex:pageBlockSection>
 
         </apex:pageBlock>
