modalの表示時間を変更

--- a/force-app/main/default/pages/SNS_Tweet.page
+++ b/force-app/main/default/pages/SNS_Tweet.page
@@ -95,7 +95,7 @@
         </script> 
          -->
 
-        <button id="myBtn">Open Modal</button>
+        <button type="button" id="myBtn">Open Modal</button>
 
         <!-- The Modal -->
         <div id="myModal" class="modal">
