--- a/force-app/main/default/pages/SNS_Tweet.page
+++ b/force-app/main/default/pages/SNS_Tweet.page
@@ -102,8 +102,20 @@
 
         <!-- Modal content -->
         <div class="modal-content">
-            <span class="close">&times;</span>
-            <p>Some text in the Modal..</p>
+            <apex:pageBlock>
+                <span class="close">&times;</span>
+                <p>Some text in the Modal..</p>
+                <apex:pageBlockSection columns="1">    
+                <apex:messages/><br/>
+                    <apex:inputField value="{! Tweet__c.title__c}"/>
+                    <apex:inputTextarea value="{! Tweet__c.body__c}" style="width:315px; height:70px;"/>
+                </apex:pageBlockSection>
+
+                <apex:pageBlockButtons>
+                    <apex:commandButton action="{! save }" value="Post"/>
+                </apex:pageBlockButtons>
+            </apex:pageBlock>
+            
         </div>
 
         </div>
