--- a/force-app/main/default/pages/SNS_Tweet.page
+++ b/force-app/main/default/pages/SNS_Tweet.page
@@ -95,7 +95,7 @@
         </script> 
          -->
 
-        <button type="button" id="myBtn">Open Modal</button>
+        <button type="button" id="myBtn">New Comment</button>
 
         <!-- The Modal -->
         <div id="myModal" class="modal">
@@ -103,18 +103,17 @@
         <!-- Modal content -->
         <div class="modal-content">
             <apex:pageBlock>
-                <span class="close">&times;</span>
-                <p>Some text in the Modal..</p>
                 <apex:pageBlockSection columns="1">    
                 <apex:messages/><br/>
-                    <apex:inputField value="{! Tweet__c.title__c}"/>
-                    <apex:inputTextarea value="{! Tweet__c.body__c}" style="width:315px; height:70px;"/>
+                    <apex:inputTextarea value="{! sub_comment.body__c}" style="width:315px; height:70px;"/>
                 </apex:pageBlockSection>
 
                 <apex:pageBlockButtons>
-                    <apex:commandButton action="{! save }" value="Post"/>
+                    <apex:commandButton action="{! comment }" value="Comment"/>
                 </apex:pageBlockButtons>
             </apex:pageBlock>
+            <span class="close">&times;</span>
+                
             
         </div>
 
