--- a/force-app/main/default/pages/SNS_Home.page
+++ b/force-app/main/default/pages/SNS_Home.page
@@ -18,7 +18,7 @@
                         <apex:outputLink value="./SNS_Tweet?id={!tw.id}"><apex:outputField value="{!tw.title__c}"/></apex:outputLink> 
                     </apex:column> 
                     <apex:column value="{! tw.body__c }"/>
-                    <!-- <apex:column value="{! tw.like_num }"/> -->
+                    <apex:column value="{! tw.like_num__c }"/>
                     <apex:column value="{! tw.CreatedById }"/>
                     <apex:column value="{! tw.CreatedDate }"/>
                 </apex:pageBlockTable>
