フォローといいねのtrigger作成

--- a/force-app/main/default/pages/SNS_Tweet.page
+++ b/force-app/main/default/pages/SNS_Tweet.page
@@ -64,6 +64,10 @@
     
 
             </apex:pageBlockSection>
+            
+            <apex:pageBlockButtons>
+                    <apex:commandButton action="{! good }" value="Good"/>
+            </apex:pageBlockButtons>
 
         </apex:pageBlock>
 <!-- 
