フォロー機能の追加

--- a/force-app/main/default/pages/SNS_User.page
+++ b/force-app/main/default/pages/SNS_User.page
@@ -1,4 +1,4 @@
-<apex:page standardController="User" extensions="TweetExtension">
+<apex:page standardController="User" extensions="FollowExtension">
     <apex:form>
         <apex:pageBlock title = "Mypage" id = "users_list">
             <apex:pageBlockButtons>
