--- a/force-app/main/default/pages/SNS_Home.page
+++ b/force-app/main/default/pages/SNS_Home.page
@@ -1,4 +1,4 @@
-<apex:page StandardController="Tweet__c" recordSetVar="tweets">
+<apex:page StandardController="Tweet__c" extensions="TweetExtension">
     
     <apex:form>
         
@@ -11,21 +11,35 @@
                 <apex:commandButton value="Newpost" action="{!URLFOR($Page.SNS_Post)}" />
             </apex:pageBlockButtons>
     
-            <apex:pageBlockSection columns="1">
+            <!-- <apex:pageBlockSection columns="1">-->
                 <!--ここにタイムラインを表示-->
-                <apex:pageBlockTable value="{! tweets }" var="tw">
+                <!--<apex:pageBlockTable value="{! tweets }" var="tw">
                     <apex:column>
                         <apex:outputLink value="./SNS_Tweet?id={!tw.id}"><apex:outputField value="{!tw.title__c}"/></apex:outputLink> 
                     </apex:column> 
                     <apex:column value="{! tw.body__c }"/>
-                    <apex:column value="{! tw.like_num__c }"/>
+                    <apex:column value="{! tw.like_count__c }"/>
                     <apex:column value="{! tw.CreatedById }"/>
                     <apex:column value="{! tw.CreatedDate }"/>
                 </apex:pageBlockTable>
 
-            </apex:pageBlockSection>
+            </apex:pageBlockSection> -->
         
         </apex:pageBlock>
+
+        <apex:pageBlock title="FollowTweets" id="follow_tweets_list">
+            <apex:pageBlockTable value="{! FollowTweets }" var="ft">
+                <apex:column>
+                    <apex:outputLink value="./SNS_Tweet?id={!ft.id}"><apex:outputField value="{!ft.title__c}"/></apex:outputLink> 
+                </apex:column>
+                <apex:column value="{! ft.body__c}"/>
+                <apex:outputText value="{! ft.like_count__c}"/>
+                <apex:column>
+                    <apex:outputLink value="./SNS_User?id={!ft.CreatedById}"><apex:outputField value="{!ft.CreatedById}"/></apex:outputLink> 
+                </apex:column>
+                <apex:column value="{! ft.CreatedDate}"/>
+            </apex:pageBlockTable>
+        </apex:pageBlock>   
             
     </apex:form>
 
