--- a/force-app/main/default/pages/SNS_Home.page
+++ b/force-app/main/default/pages/SNS_Home.page
@@ -4,7 +4,7 @@
         
         <apex:pageBlock title = "Home">
             
-            <apex:pageBlockButtons>
+            <apex:pageBlockButtons location="top">
                 <!-- ここにツールバーを入れる 追加だよ-->
                 <apex:commandButton value="Home" action="{!URLFOR($Page.SNS_Home)}" />
                 <apex:commandButton value="Mypage" action="{!URLFOR($Page.SNS_User)}?id={! $User.Id}"/>
