--- a/force-app/main/default/pages/SNS_Home.page
+++ b/force-app/main/default/pages/SNS_Home.page
@@ -35,7 +35,8 @@
                 <apex:column value="{! ft.body__c}"/>
                 <apex:outputText value="{! ft.like_count__c}"/>
                 <apex:column>
-                    <apex:outputLink value="./SNS_User?id={!ft.CreatedById}"><apex:outputField value="{!ft.CreatedById}"/></apex:outputLink> 
+                    <!-- <apex:outputLink value="./SNS_User?id={! ft.CreatedById}"><apex:outputField value="{!ft.CreatedById}"/></apex:outputLink>  -->
+                    <apex:commandLink value="{!ft.CreatedBy.Name}" action="{!URLFOR($Page.SNS_User)}?id={! ft.CreatedById}" />
                 </apex:column>
                 <apex:column value="{! ft.CreatedDate}"/>
             </apex:pageBlockTable>
